just about done

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         </div>
         <div class="col">
             <img src="img/EarthAltered.png" alt="Earth Photo" class="indeximg">
-            <h2>World Map</h2>
+            <h2>World Economics</h2>
             <div class="caption">
-                <p>Take a look at each country's national animal, income level, and biodiversity rating.</p>
+                <p>The economics of countries shows the health of the human population, and often negatively correlates with biodiversity with some exceptions.</p>
                 <p><a href="/map/map.html" class="button1">Go</a></p>
                 </div>
         </div>
