trying to fix styles up more

--- a/map/map.html
+++ b/map/map.html
@@ -42,7 +42,7 @@
       <li><a href="../https://kerstinnyquist.myportfolio.com/">Portfolio</a></li>
     </ul>
 </nav>
-<h1>The Status of Countries</h1>
+<h1>Economic Status of Countries</h1>
 <hr>
 <div class="mappagegrid">
   <div id="container" class="svg-container">
