--- a/map/map.html
+++ b/map/map.html
@@ -49,5 +49,6 @@
   <svg class="wholething" width="960" height="500"></svg>
   </div>
   <!--<div class="information"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Flag_of_Kosovo.svg/1200px-Flag_of_Kosovo.svg.png" alt=""></div>-->
+</div>
 </body>
 </html>
